updated the website template

--- a/dates.html
+++ b/dates.html
@@ -1,100 +1,151 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Important Dates | POLAR @ 2026</title>
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>Important Dates - POLAR @ SemEval-2026</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="is-preload">
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="assets/style.css"/>
-</head>
-<body>
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-  <nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top">
-    <a class="nav-link" href="index.html#about">About</a>
-    <a class="nav-link" href="tasks.html">Tasks</a>
-    <a class="nav-link" href="participation.html">Participation</a>
-  </nav>
+				<!-- Main -->
+					<div id="main">
+						<div class="inner">
 
+							<!-- Header -->
+								<header id="header">
+									<a href="/" class="logo"><strong>POLAR</strong> @ SemEval-2026</a>
+									<ul class="icons">
+										<li><a href="https://discord.gg/XpJNRXWt" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
+										<li><a href="https://groups.google.com/g/polarization-semeval-2026-participants" class="icon solid fa-envelope"><span class="label">Google Group</span></a></li>
+										<li><a href="https://github.com/Polar-SemEval/trial-data" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									</ul>
+								</header>
 
-<section class="important-dates container my-5 py-5">
-  <div class="dates-header text-center mb-4">
-    <h2>📅 Important Dates – SemEval-2026</h2>
-    <p class="text-muted">Keep track of the key milestones for your participation in the Polar task.<br>All deadlines are <strong>11:59 PM AoE (Anywhere on Earth)</strong>.</p>
-  </div>
+							<!-- Content -->
+								<section>
+									<header class="main">
+										<h1>Important Dates and Task Phases</h1>
+									</header>
 
-  <div class="table-responsive">
-    <table class="dates-table table table-bordered">
-      <thead class="table-light">
-        <tr>
-          <th scope="col">📆 Date</th>
-          <th scope="col">📌 Event</th>
-        </tr>
-      </thead>
-      <tbody>
-     
-    <td>31 March 2025</td>
-    <td>Call for Participation Opens / Task Proposals Due</td>
-  </tr>
-  <tr>
-    <td>8 August 2025</td>
-    <td>Trial Data Released</td>
-  </tr>
-  <tr>
-    <td>1 September 2025</td>
-    <td>Training Data Released</td>
-  </tr>
-  <tr>
-    <td>1 December 2025</td>
-    <td>Test Data Released (internal deadline; not for public release)</td>
-  </tr>
-  <tr>
-    <td>1 January 2026</td>
-    <td>Evaluation Results Released</td>
-  </tr>
-  <tr>
-    <td>10 January 2026</td>
-    <td>System Submission Deadline / Evaluation Start</td>
-  </tr>
-  <tr>
-    <td>31 January 2026</td>
-    <td>Evaluation Results Released / Evaluation End</td>
-  </tr>
-  <tr>
-    <td>1 February 2026</td>
-    <td>Evaluation End</td>
-  </tr>
-  <tr>
-    <td>February 2026</td>
-    <td>System Paper Submission Deadline</td>
-  </tr>
-  <tr>
-    <td>March 2026</td>
-    <td>Notification of Acceptance</td>
-  </tr>
-  <tr>
-    <td>April 2026</td>
-    <td>Camera-Ready Papers Due</td>
-  </tr>
-  <tr>
-    <td>Summer 2026</td>
-    <td>SemEval-2026 Workshop at [Conference Location TBD]</td>
-  </tr>
+									<p>Keep track of the key milestones for your participation in the Polar task. All deadlines are <strong>11:59 PM AoE (Anywhere on Earth)</strong>.</p>
 
-      </tbody>
-    </table>
-  </div>
-</section>
+									<div class="table-wrapper">
+										<table>
+											<thead>
+												<tr>
+													<th>Event</th>
+													<th>Date</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>Sample data ready</td>
+													<td>8 August 2025</td>
+												</tr>
+												<tr>
+													<td>Training data ready</td>
+													<td>10 September 2025</td>
+												</tr>
+												<tr>
+													<td>Evaluation Start</td>
+													<td>10 January 2026</td>
+												</tr>
+												<tr>
+													<td>Evaluation End</td>
+													<td>1 February 2026</td>
+												</tr>
+												<tr>
+													<td>System Paper Submission Deadline</td>
+													<td>February 2026</td>
+												</tr>
+												<tr>
+													<td>Notification of Acceptance</td>
+													<td>March 2026</td>
+												</tr>
+												<tr>
+													<td>Camera-Ready Papers Due</td>
+													<td>April 2026</td>
+												</tr>
+												<tr>
+													<td>SemEval-2026 Workshop at [Conference Location TBD]</td>
+													<td>Summer 2026</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
 
-<footer class="footer-section">
-  <div class="footer-container text-center">
-    <img src="assets/logo-small.png" alt="POLAR Task Logo" style="width: 80px; height: auto; margin-bottom: 10px;" />
-    <p>&copy; 2026 POLAR Shared Task. All rights reserved.</p>
-    <p>Made with ❤️ by the POLAR Team</p>
-  </div>
-</footer>
+									<hr class="major" />
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+									<h2>Task Phases Overview</h2>
+
+									<h3>Phase 1: Data Release (August - September 2025)</h3>
+									<p>Sample and training data will be made available to participants. This includes trial data for all three subtasks across the 22 supported languages.</p>
+
+									<h3>Phase 2: Development Period (September 2025 - January 2026)</h3>
+									<p>Teams develop and refine their models using the provided training data. Participants can make up to 999 submissions during this phase with results visible only to their team.</p>
+
+									<h3>Phase 3: Evaluation Period (January 10 - February 1, 2026)</h3>
+									<p>Official evaluation phase where teams can make up to 3 submissions. Only the final submission will be considered official for ranking purposes.</p>
+
+									<h3>Phase 4: Paper Submission (February 2026)</h3>
+									<p>Teams must submit system description papers to be included in the final ranking. Papers will undergo peer review.</p>
+
+									<h3>Phase 5: Workshop (Summer 2026)</h3>
+									<p>Presentation of results and discussion of findings at the SemEval-2026 workshop.</p>
+
+									<div class="box">
+										<p><strong>Important Reminder:</strong> To be included in the official task ranking, you <strong>MUST</strong> submit a system description paper by the deadline in February 2026.</p>
+									</div>
+
+								</section>
+
+                            <!-- Footer -->
+                                <footer>
+                                    <div class="inner">
+                                        <p>&copy; 2026 POLAR Shared Task. All rights reserved. Adapted from Editorial Template by <a href="https://html5up.net">HTML5 UP</a></p>
+                                    </div>
+                                </footer>
+
+						</div>
+					</div>
+
+				<!-- Sidebar -->
+					<div id="sidebar">
+						<div class="inner">
+
+							<!-- Menu -->
+								<nav id="menu">
+									<header class="major">
+										<h2>Menu</h2>
+									</header>
+									<ul>
+										<li><a href="/">Homepage</a></li>
+										<li><a href="tasks.html">Tasks & Subtasks</a></li>
+										<li><a href="participation.html">How to Participate</a></li>
+										<li><a href="faq.html">FAQs</a></li>
+										<li><a href="dates.html">Important Dates</a></li>
+										<li><a href="resources.html">Resources</a></li>
+										<li><a href="communication.html">Communication</a></li>
+										<li><a href="organizers.html">Organizers</a></li>
+										<li><a href="announcements/">Announcements</a></li>
+									</ul>
+								</nav>
+
+						</div>
+					</div>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
