--- a/participation.html
+++ b/participation.html
@@ -1,139 +1,202 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Important Dates | POLAR @ 2026</title>
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>How to Participate - POLAR @ SemEval-2026</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="is-preload">
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="assets/style.css"/>
-</head>
-<body>
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-      <!-- Navbar Starts -->
-      <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" style="background-color: #e3f2fd;" data-bs-theme="light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">POLAR</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
-              <li class="nav-item"><a class="nav-link active" href="participation.html">Participation</a></li>
-              <li class="nav-item"><a class="nav-link" href="documentation.html">Documentaion</a></li>
-              <li class="nav-item"><a class="nav-link" href="organisers.html">Organizers</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Terms</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Results</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Awards</a></li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Type something..." aria-label="Search"/>
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-      </nav>
-      <!-- Navbar Ends -->
-  <nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top">
-    <a class="nav-link" href="index.html#about">About</a>
-    <a class="nav-link" href="tasks.html">Tasks</a>
-    <a class="nav-link active" href="participation.html">Participation</a>
-  </nav>
+				<!-- Main -->
+					<div id="main">
+						<div class="inner">
 
-<section class="participation container-fluid p-5">
-  <div class="container-fluid p-5">
+							<!-- Header -->
+								<header id="header">
+									<a href="/" class="logo"><strong>POLAR</strong> @ SemEval-2026</a>
+									<ul class="icons">
+										<li><a href="https://discord.gg/XpJNRXWt" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
+										<li><a href="https://groups.google.com/g/polarization-semeval-2026-participants" class="icon solid fa-envelope"><span class="label">Google Group</span></a></li>
+										<li><a href="https://github.com/Polar-SemEval/trial-data" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									</ul>
+								</header>
 
-    <h2>🚀 Participation</h2>
-    <p>SemEval 2026 Shared Task
-    </p>
-    <p>We welcome researchers, students, and practitioners from around the world to participate in this task. Whether you’re a solo researcher or part of a large team, your contributions are valued!</p>
+							<!-- Content -->
+								<section>
+									<header class="main">
+										<h1>How to Participate</h1>
+									</header>
 
-    <h3>🧩 Who Can Participate?</h3>
-    <p>Anyone with an interest in NLP, sentiment analysis, social computing, or multilingual language processing is encouraged to join. You can participate as:</p>
-    <ul>
-      <li>An individual</li>
-      <li>A research group</li>
-      <li>A student team</li>
-      <li>An industry team</li>
-    </ul>
-    <p>No prior experience in SemEval is required.</p>
+									<h2>Participation Steps</h2>
+									<ol>
+										<li><strong>Register:</strong> Sign up on the CodaBench competition platform.</li>
+										<li><strong>Tasks:</strong> Decide on the task(s) you want to participate in (Subtask 1, 2 and/or 3).</li>
+										<li><strong>Download:</strong> Access to the datasets for each task will be provided in this repository.</li>
+										<li><strong>Develop:</strong> Build your models using the provided data.</li>
+										<li><strong>Submit:</strong> Submit your predictions on the CodaBench competition platform.</li>
+									</ol>
 
-    <h3>📝 How to Register</h3>
-    <ol>
-    
-    </ol>
+									<hr class="major" />
 
-    <h3>🗓️ Important Dates</h3>
-    <ul>
-      <li>31 March 2025: Call for Participation Opens / Task Proposals Due</li>
-      <li>8 August 2025: Trial Data Released</li>
-      <li>1 September 2025: Training Data Released</li>
-      <li>1 December 2025: Test Data Released (internal deadline; not for public release)</li>
-      <li>1 January 2026: Evaluation Results Released / Evaluation End</li>
-      <li>10 January 2026: System Submission Deadline / Evaluation Start</li>
-      <li>February 2026: System Paper Submission Deadline</li>
-      <li>March 2026: Notification of Acceptance</li>
-      <li>April 2026: Camera-Ready Papers Due</li>
-      <li>Summer 2026: SemEval-2026 Workshop at [Conference Location TBD]</li>
-      <li>Workshop at SemEval 2026: TBD</li>
-    </ul>
+									<h2>Evaluation Metrics</h2>
+									<ul>
+										<li><strong>Subtask 1:</strong> Macro F1</li>
+										<li><strong>Subtask 2:</strong> Macro F1</li>
+										<li><strong>Subtask 3:</strong> Macro F1</li>
+									</ul>
 
-    <h3>🧪 Submissions & Evaluation</h3>
-    <p>Participants will submit their model predictions via CodaLab during the evaluation window. Detailed submission guidelines and formats will be available on the Task Documentation page.</p>
-    <p>You may submit multiple runs during the evaluation phase. Final system descriptions must accompany your submission to be eligible for official ranking and presentation.</p>
+									<hr class="major" />
 
-    <h3>🏆 Recognition & Publication</h3>
-    <p>Top-performing teams will:</p>
-    <ul>
-      <li>Be featured in the official SemEval 2026 proceedings</li>
-      <li>Present their approach at the SemEval workshop</li>
-      <li>Gain visibility in the NLP research community</li>
-    </ul>
-    <p>All teams that submit system descriptions will be included in the task overview paper.</p>
-<h3>🙌 Join Us</h3>
+									<h2>Competition Rules and Terms</h2>
 
-<div class="row gy-4 my-4">
-  <!-- Google Group -->
-  <div class="col-md-6">
-    <div class="card shadow-sm border-0 h-100">
-      <div class="card-body">
-        <h5 class="card-title">📬 Google Group</h5>
-        <p class="card-text">Join our google group to receive updates, announcements, and community support.</p>
-    <a href="https://groups.google.com/g/polarization-semeval-2026-participants/" target="_blank" class="btn btn-purple text-light">Join the Group</a>
- </div>
-    </div>
-  </div>
+									<h3>1. Consent to Public Release of Scores</h3>
+									<ul>
+										<li>By submitting results, you consent to the public release of your scores on:
+											<ul>
+												<li>the competition website</li>
+												<li>at the designated workshop</li>
+												<li>in associated proceedings</li>
+											</ul>
+										</li>
+										<li>Task organizers have discretion over the release and choice of metrics.</li>
+										<li>Scores may include:
+											<ul>
+												<li>automatic and manual quantitative judgments</li>
+												<li>qualitative judgments</li>
+												<li>other metrics as deemed appropriate</li>
+											</ul>
+										</li>
+									</ul>
 
-  <!-- Google Colab -->
-  <div class="col-md-6">
-    <div class="card shadow-sm border-0 h-100">
-      <div class="card-body">
-        <h5 class="card-title">🧪 Google Colab</h5>
-        <p class="card-text">An interactive Colab notebook to help you get started is on the way!</p>
-        <button class="btn btn-secondary" disabled>Coming Soon</button>
-      </div>
-    </div>
-  </div>
-</div>
+									<h3>2. Score Release and Validity</h3>
+									<ul>
+										<li>Task organizers reserve the right to withhold scores for:
+											<ul>
+												<li>incomplete submissions</li>
+												<li>erroneous submissions</li>
+												<li>deceptive submissions</li>
+												<li>rule-violating submissions</li>
+											</ul>
+										</li>
+										<li>Inclusion of a submission's scores does not constitute endorsement.</li>
+									</ul>
 
-    <h3>💡 Questions?</h3>
-    <p>Join our GitHub Discussions, attend our webinars, or contact us at <a href="groups.google.com/g/polarization-semeval-2026-organisers">polarization-semeval-2026-organisers@googlegroups.com</a></p>
-    <p>We look forward to your participation and insights!</p>
-  </div>
-</section>
+									<h3>3. Team Participation Rules</h3>
+									<ul>
+										<li>Participants may be involved in only one team.</li>
+										<li>Exceptions may be granted with prior approval from organizers.</li>
+									</ul>
 
+									<h3>4. Account Management</h3>
+									<ul>
+										<li>Each team must create and use exactly one account on the designated platform.</li>
+									</ul>
 
-<footer class="footer-section">
-  <div class="footer-container text-center">
-    <img src="assets/logo-small.png" alt="POLAR Task Logo" style="width: 80px; height: auto; margin-bottom: 10px;" />
-    <p>&copy; 2026 POLAR Shared Task. All rights reserved.</p>
-    <p>Made with ❤️ by the POLAR Team</p>
-  </div>
-</footer>
+									<h3>5. Team Constitution</h3>
+									<ul>
+										<li>Team membership cannot be changed after the evaluation period begins.</li>
+									</ul>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+									<h3>6. Development Period Rules</h3>
+									<ul>
+										<li>Teams can submit up to 999 submissions.</li>
+										<li>Results are visible only to the submitting team.</li>
+										<li>Leaderboard is disabled.</li>
+										<li>Warnings and errors are visible for each submission.</li>
+									</ul>
+
+									<h3>7. Evaluation Period Rules</h3>
+									<ul>
+										<li>The teams are constrained to make 3 submissions.</li>
+										<li>Only the final submission will be considered official.</li>
+										<li>Warnings and errors are visible for each submission.</li>
+									</ul>
+
+									<h3>8. Post-Competition</h3>
+									<ul>
+										<li>The gold labels will be released after the competition.</li>
+										<li>The teams are encouraged to report results on all their system variants in their description paper.</li>
+										<li>The official submission results must be clearly indicated.</li>
+									</ul>
+
+									<h3>9. Public Release of Submissions</h3>
+									<ul>
+										<li>Final team submissions may be made public after the evaluation period.</li>
+									</ul>
+
+									<h3>10. Disclaimer about the Datasets</h3>
+									<ul>
+										<li>Organizers and affiliated institutions provide no warranties on dataset correctness or completeness.</li>
+										<li>They are not liable for dataset access or usage.</li>
+									</ul>
+
+									<h3>11. Peer Review Process</h3>
+									<ul>
+										<li>Each participant will review another team's system description paper.</li>
+									</ul>
+
+									<h3>12. Dataset Usage Restrictions</h3>
+									<ul>
+										<li>Datasets should only be used for scientific or research purposes.</li>
+										<li>Any other use is explicitly prohibited.</li>
+										<li>Datasets must not be redistributed or shared with third parties.</li>
+										<li>Interested parties should be directed to the official website.</li>
+									</ul>
+
+									<h3>13. Final Ranking</h3>
+									<ul>
+										<li>To be included in the official task ranking, you <strong>MUST</strong> submit a system description paper.</li>
+									</ul>
+
+								</section>
+
+                            <!-- Footer -->
+                                <footer>
+                                    <div class="inner">
+                                        <p>&copy; 2026 POLAR Shared Task. All rights reserved. Adapted from Editorial Template by <a href="https://html5up.net">HTML5 UP</a></p>
+                                    </div>
+                                </footer>
+
+						</div>
+					</div>
+
+				<!-- Sidebar -->
+					<div id="sidebar">
+						<div class="inner">
+
+							<!-- Menu -->
+								<nav id="menu">
+									<header class="major">
+										<h2>Menu</h2>
+									</header>
+									<ul>
+										<li><a href="/">Homepage</a></li>
+										<li><a href="tasks.html">Tasks & Subtasks</a></li>
+										<li><a href="participation.html">How to Participate</a></li>
+										<li><a href="faq.html">FAQs</a></li>
+										<li><a href="dates.html">Important Dates</a></li>
+										<li><a href="resources.html">Resources</a></li>
+										<li><a href="communication.html">Communication</a></li>
+										<li><a href="organizers.html">Organizers</a></li>
+										<li><a href="announcements/">Announcements</a></li>
+									</ul>
+								</nav>
+
+						</div>
+					</div>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
