--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/logo-small.png" alt="POLAR Task Banner" />
+										<img src="assets/POLAR.png" alt="POLAR Task Banner" />
 									</span>
 								</section>
 
