--- a/organizers.html
+++ b/organizers.html
@@ -104,7 +104,7 @@
 										</div>
 										
 										<div class="organizer-card">
-											<img src="images/Sarah Kohail.png" alt="Dr. Sarah Kohail" class="organizer-photo">
+											<img src="images/sarah2.jpeg" alt="Dr. Sarah Kohail" class="organizer-photo">
 											<div class="organizer-info">
 												<h4><a href="https://github.com/snkohail" target="_blank">Dr. Sarah Kohail</a></h4>
 												<p>Zayed University (United Arab Emirates)</p>
