--- a/announcements/evaluation-period-begins.html
+++ b/announcements/evaluation-period-begins.html
@@ -26,6 +26,7 @@
 								</header>
 
 							<!-- Content -->
+							<!--1-->
 								<section>
 									<header class="main">
 										<h1>Evaluation Period Now Open - Submit Your Final Models</h1>
@@ -89,6 +90,18 @@
 										<li><a href="../participation.html" class="button">View Competition Rules</a></li>
 									</ul>
 
+								</section>
+								<!--2-->
+								<section>
+									<header class="main">
+										<h1>Train Data Release Soon - Stay Tuned!</h1>
+										<p>Posted on September 3, 2025 at 16:45 UTC</p>
+									</header>
+
+									<p>We are pleased to announce that the training dataset will be released shortly.
+										Details regarding access and usage guidelines will be provided in the upcoming release notes.</p>
+
+									
 								</section>
 
 							<!-- Footer -->
