--- a/communication.html
+++ b/communication.html
@@ -19,7 +19,7 @@
 								<header id="header">
 									<a href="/" class="logo"><strong>POLAR</strong> @ SemEval-2026</a>
 									<ul class="icons">
-										<li><a href="https://discord.gg/XpJNRXWt" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
+										<li><a href="https://discord.gg/RF9MzYwKZP" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
 										<li><a href="https://groups.google.com/g/polarization-semeval-2026-participants" class="icon solid fa-envelope"><span class="label">Google Group</span></a></li>
 										<li><a href="https://github.com/Polar-SemEval/trial-data" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									</ul>
@@ -42,7 +42,7 @@
 												<h3>Discord Server</h3>
 												<p>Join our Discord server for real-time discussions, quick questions, and community interaction with other participants.</p>
 												<ul class="actions">
-													<li><a href="https://discord.gg/XpJNRXWt" target="_blank" class="button">Join Discord</a></li>
+													<li><a href="https://discord.gg/RF9MzYwKZP" target="_blank" class="button">Join Discord</a></li>
 												</ul>
 											</div>
 										</article>
