--- a/index.html
+++ b/index.html
@@ -53,8 +53,32 @@
 										<article>
 											<span class="icon solid fa-comments"></span>
 											<div class="content">
-												<h3>22 Languages</h3>
-												<p>German, Spanish, English, Arabic, Hausa, Urdu, Amharic, Italian, Russian, Burmese, Chinese, Nepali, Hindi, Telugu, Persian, Turkish, Bengali, Somali, Portuguese, Emakhuwa, and Igbo.</p>
+												<h3>25 Languages</h3>
+												<p>German,
+													Spanish,
+													English,
+													Arabic,
+													Hausa,
+													Urdu,
+													Amharic,
+													Italian,
+													Russian,
+													Myanmar,
+													Chinese,
+													Nepalish,
+													Hindi,
+													Telugu,
+													Persian,
+													Turkish,
+													Bangladish,
+													Somali,
+													Brazilian Portuguess,
+													Emakhuwa,
+													Mozambican Portuguese,
+													Igbo from Nigeria,
+													Khmer,
+													Odia,
+													Punjabi.</p>
 											</div>
 										</article>
 										<article>
