--- a/tasks.html
+++ b/tasks.html
@@ -189,8 +189,32 @@
 									<hr class="major" />
 
 									<h2>Languages Covered</h2>
-									<p>The task covers <strong>22 languages</strong> across different cultural and geographical contexts:</p>
-									<p>German, Spanish, English, Arabic, Hausa, Urdu, Amharic, Italian, Russian, Burmese (Myanmar), Chinese, Nepali, Hindi, Telugu, Persian (Farsi), Turkish, Bengali, Somali, Portuguese (Brazilian), Emakhuwa, Portuguese (Mozambican), and Igbo (Nigeria).</p>
+									<p>The task covers <strong>25 languages</strong> across different cultural and geographical contexts:</p>
+									<p>German,
+										Spanish,
+										English,
+										Arabic,
+										Hausa,
+										Urdu,
+										Amharic,
+										Italian,
+										Russian,
+										Myanmar,
+										Chinese,
+										Nepalish,
+										Hindi,
+										Telugu,
+										Persian,
+										Turkish,
+										Bangladish,
+										Somali,
+										Brazilian Portuguess,
+										Emakhuwa,
+										Mozambican Portuguese,
+										Igbo from Nigeria,
+										Khmer,
+										Odia,
+										Punjabi.</p>
 
 									<hr class="major" />
 
