--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 										<article>
 											<span class="icon solid fa-comments"></span>
 											<div class="content">
-												<h3>25 Languages</h3>
+												<h3>21 Languages</h3>
 												<p>German,
 													Spanish,
 													English,
@@ -71,20 +71,16 @@
 													Persian,
 													Turkish,
 													Bangladish,
-													Somali,
-													Brazilian Portuguess,
-													Emakhuwa,
-													Mozambican Portuguese,
-													Igbo from Nigeria,
 													Khmer,
 													Odia,
-													Punjabi.</p>
+													Punjabi,
+													Swahili.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-tasks"></span>
 											<div class="content">
-												<h3>3 Subtasks</h3>
+												<h3>3 Tasks</h3>
 												<p>Polarization Detection, Polarization Type Classification, and Manifestation Identification across multiple languages and cultural contexts.</p>
 											</div>
 										</article>
@@ -99,7 +95,7 @@
 											<span class="icon solid fa-chart-line"></span>
 											<div class="content">
 												<h3>Evaluation</h3>
-												<p>All subtasks evaluated using Macro F1 score across different languages and cultural contexts.</p>
+												<p>All tasks evaluated using Macro F1 score across different languages and cultural contexts.</p>
 											</div>
 										</article>
 									</div>
