--- a/tasks.html
+++ b/tasks.html
@@ -207,14 +207,10 @@
 										Persian,
 										Turkish,
 										Bangladish,
-										Somali,
-										Brazilian Portuguess,
-										Emakhuwa,
-										Mozambican Portuguese,
-										Igbo from Nigeria,
 										Khmer,
 										Odia,
-										Punjabi.</p>
+										Punjabi,
+										Swahili.</p>
 
 									<hr class="major" />
 
