--- a/faq.html
+++ b/faq.html
@@ -55,7 +55,7 @@
 										<li><strong>Test set(s):</strong> Released only after the competition ends.</li>
 									</ul>
 
-									<h3>Can I use LLMs in the different tasks?</h3>
+									<h3>Can I use LLMs in the different subtasks?</h3>
 									<p>Yes.</p>
 
 									<h3>Can I use additional datasets (e.g., publicly available ones)?</h3>
