--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 										<article>
 											<span class="icon solid fa-tasks"></span>
 											<div class="content">
-												<h3>3 Tasks</h3>
+												<h3>3 Subtasks</h3>
 												<p>Polarization Detection, Polarization Type Classification, and Manifestation Identification across multiple languages and cultural contexts.</p>
 											</div>
 										</article>
@@ -95,7 +95,7 @@
 											<span class="icon solid fa-chart-line"></span>
 											<div class="content">
 												<h3>Evaluation</h3>
-												<p>All tasks evaluated using Macro F1 score across different languages and cultural contexts.</p>
+												<p>All subtasks evaluated using Macro F1 score across different languages and cultural contexts.</p>
 											</div>
 										</article>
 									</div>
