--- a/participation.html
+++ b/participation.html
@@ -34,8 +34,8 @@
 									<h2>Participation Steps</h2>
 									<ol>
 										<li><strong>Register:</strong> Sign up on the CodaBench competition platform.</li>
-										<li><strong>Tasks:</strong> Decide on the task(s) you want to participate in (Subtask 1, 2 and/or 3).</li>
-										<li><strong>Download:</strong> Access to the datasets for each task will be provided in this repository.</li>
+										<li><strong>Subtasks:</strong> Decide on the subtask(s) you want to participate in (Subtask 1, 2 and/or 3).</li>
+										<li><strong>Download:</strong> Access to the datasets for each subtask will be provided in this repository.</li>
 										<li><strong>Develop:</strong> Build your models using the provided data.</li>
 										<li><strong>Submit:</strong> Submit your predictions on the CodaBench competition platform.</li>
 									</ol>
