--- a/tasks.html
+++ b/tasks.html
@@ -82,6 +82,10 @@
 										</table>
 									</div>
 
+									<ul class="actions">
+										<li><a href="https://www.codabench.org/competitions/10522/" class="button big" target="_blank">Go to Subtask-1 Competition</a></li>
+									</ul>
+
 									<hr class="major" />
 
 									<h2>Subtask 2: Polarization Type Classification</h2>
